--- a/src/stylesheets/less/variables.less
+++ b/src/stylesheets/less/variables.less
@@ -7,3 +7,5 @@
 @gray-lighter: #f7f7f7;
 @placeholder-text: #bbbbbb;
 @navbar-height: 80px;
+@grid-float-breakpoint: @screen-md;
+@navbar-collapse-max-height: 500px;
