--- a/views/become-a-sponsor/index.html
+++ b/views/become-a-sponsor/index.html
@@ -1,1 +1,268 @@
-sponsor
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>FIDV Young Leaders | Become a Sponsor</title>
+    <meta name="description" content="Annual Winter Gala presented by the FIDV Young Leadership Board" />
+
+    <meta property="og:title" content="Sponsor the FIDV Winter Gala" />
+    <meta property="og:site_name" content="Friends of Israeli Disabled Veterans Young Leaders"/>
+    <meta property="og:url" content="https://fidv.org/youngleaders/become-a-sponsor" />
+    <meta property="og:description" content="Annual Winter Gala presented by the FIDV Young Leadership Board" />
+    <meta property="og:image" content="https://fidv.org/youngleaders/img/fidv-share-image.jpg" />
+
+    <link rel="canonical" href="https://fidv.org/youngleaders/" />
+
+    <link rel="shortcut icon" href="https://fidv.org/youngleaders/img/favicon.ico">
+
+    <link rel="stylesheet" type="text/css" href="./build/1.0.0/css/style.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body class="donate">
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/youngleaders">
+                    <img alt="Brand" src="img/logos/fidv-logo.png">
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/youngleaders#buy-tickets">Tickets</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/youngleaders#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/youngleaders#past-event-2">Past Events</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/youngleaders#leadership">Leadership</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/youngleaders/become-a-sponsor">Become a Sponsor</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-fidv" href="https://fidv.org/youngleaders/donate" style="border:none;">Donate</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+
+    <!-- Services Section -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Sponsor the 2018 FIDV Winter Gala</h2>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="row sponsorship-tier">
+                        <div class="col-md-4">
+                            <div class="sponsorship-tier__box sponsorship-tier__box--friends">
+                                <div class="sponsorship-tier__title">Friends</div>
+                                <div class="sponsorship-tier__donation-amount">Donation of $1,000+</div>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <ul class="sponsorship-tier__info">
+                                <li>2 tickets to the FIDV Winter Gala</li>
+                                <li>Placement on the Winter Gala ticketing site</li>
+                                <li>Honorable mention on sponsor cards to be displayed at the event</li>
+                                <li>Certificate of gratitude from FIDV</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row sponsorship-tier">
+                        <div class="col-md-4">
+                            <div class="sponsorship-tier__box sponsorship-tier__box--gold">
+                                <div class="sponsorship-tier__title">Gold</div>
+                                <div class="sponsorship-tier__donation-amount">Donation of $3,600+</div>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <ul class="sponsorship-tier__info">
+                                <li>4 tickets to the FIDV Winter Gala and a private table area</li>
+                                <li>Placement on the Winter Gala ticketing site</li>
+                                <li>Placement on the sponsorship banner to be displayed at the event</li>
+                                <li>Honorable mention on sponsor cards to be displayed at the event</li>
+                                <li>Certificate of gratitude from FIDV</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row sponsorship-tier">
+                        <div class="col-md-4">
+                            <div class="sponsorship-tier__box sponsorship-tier__box--platinum">
+                                <div class="sponsorship-tier__title">Platinum</div>
+                                <div class="sponsorship-tier__donation-amount">Donation of $5,000+</div>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <ul class="sponsorship-tier__info">
+                                <li>6 tickets to the FIDV Winter Gala and a private table area</li>
+                                <li>Placement on the Winter Gala ticketing site</li>
+                                <li>Placement on the step &amp; repeat to be displayed at the envet</li>
+                                <li>Placement on the sponsorship banner to be displayed at the event</li>
+                                <li>Honorable mention on sponsor cards to be displayed at the event</li>
+                                <li>Certificate of gratitude from FIDV</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row sponsorship-tier">
+                        <div class="col-md-4">
+                            <div class="sponsorship-tier__box sponsorship-tier__box--diamond">
+                                <div class="sponsorship-tier__title">Diamond</div>
+                                <div class="sponsorship-tier__donation-amount">Donation of $10,000+</div>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <ul class="sponsorship-tier__info">
+                                <li>8 tickets to the FIDV Winter Gala and a private table area</li>
+                                <li>Placement on the Winter Gala ticketing site</li>
+                                <li>Largest placement on the step &amp; repeat to be displayed at the envet</li>
+                                <li>Placement on the sponsorship banner to be displayed at the event</li>
+                                <li>Honorable mention on sponsor cards to be displayed at the event</li>
+                                <li>Certificate of gratitude from FIDV</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row sponsorship-tier">
+                        <div class="col-md-4">
+                            <div class="sponsorship-tier__box sponsorship-tier__box--guardian">
+                                <div class="sponsorship-tier__title">Guardian</div>
+                                <div class="sponsorship-tier__donation-amount">Donation of $18,000+</div>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <ul class="sponsorship-tier__info">
+                                <li>12 tickets to the FIDV Winter Gala and a private table area</li>
+                                <li>Placement on the Winter Gala ticketing site</li>
+                                <li>Placement on the step &amp; repeat to be displayed at the envet</li>
+                                <li>Largest placement on the sponsorship banner to be displayed at the event</li>
+                                <li>Honorable mention on sponsor cards to be displayed at the event</li>
+                                <li>Certificate of gratitude from FIDV</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row sponsorship-form">
+                        <div id="bbox-root"></div>
+                        <script type="text/javascript">
+                               window.bboxInit = function () {
+                                   bbox.showForm('79221501-69c9-497b-a6cb-96db51cdd41d');
+                               };
+                               (function () {
+                                   var e = document.createElement('script'); e.async = true;
+                                   e.src = 'https://bbox.blackbaudhosting.com/webforms/bbox-min.js';
+                                   document.getElementsByTagName('head')[0].appendChild(e);
+                               } ());
+                        </script>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="row board">
+                        <div class="col-xs-12">
+                            <a class="fancybox" href="https://fidv.org/youngleaders/img/become-a-sponsor.jpg">
+                                <img src="https://fidv.org/youngleaders/img/become-a-sponsor-thumb.jpg" alt="" class="img-responsive center-block"/>
+                            </a>
+                            <br>
+                            <p>If you have sponsorship questions, please contact Ella Levine:</p>
+                            <ul>
+                                <li>Email: <a href="mailto:elevine@fidv.org">elevine@fidv.org</a></li>
+                                <li>Phone: 212-689-3220</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="section-heading text-center">About FIDV</h2>
+                    <p>The mission of FIDV-Beit Halochem (House of the Warriors) is to care for Israeli servicemen and women wounded in the line of duty who are now disabled. At our state-of-the-art rehabilitation centers in Tel Aviv, Haifa, Jerusalem and Beer Sheva we serve more than 51,000 disabled veterans and family members. We raise awareness and funds for a broad range of social, cultural and sports training programs, offer scholarships, develop new initiatives, and provide specialized equipment for the centers. We help empower them to rebuild their lives.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 about-video">
+                    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/GodYwnCH-SE' frameborder='0' allowfullscreen></iframe></div>
+                </div>
+                <div class="col-sm-6 about-video">
+                    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/-1ZrQK_nXe8' frameborder='0' allowfullscreen></iframe></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright &copy; <a href="https://fidv.org" target="_blank">fidv.org</a> 2018</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="https://www.facebook.com/FIDVYL" target="_blank"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li><a href="https://www.instagram.com/fidv_youngleaders/" target="_blank"><i class="fa fa-instagram"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="http://fidv.org/privacy-policy/" target="_blank">Privacy Policy</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script type="text/javascript" src="./build/1.0.0/js/youngleaders.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-69802094-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+</body>
+</html>
