--- a/views/donate/index.html
+++ b/views/donate/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FIDV Young Leaders</title>
+    <title>FIDV Young Leaders | Donate</title>
     <meta name="description" content="Annual Winter Gala presented by the FIDV Young Leadership Board" />
 
-    <meta property="og:title" content="Friends of Israeli Disabled Veterans Young Leaders" />
+    <meta property="og:title" content="Donate: Friends of Israeli Disabled Veterans Young Leaders" />
     <meta property="og:site_name" content="Friends of Israeli Disabled Veterans Young Leaders"/>
-    <meta property="og:url" content="https://fidv.org/youngleaders/" />
+    <meta property="og:url" content="https://fidv.org/youngleaders/donate" />
     <meta property="og:description" content="Annual Winter Gala presented by the FIDV Young Leadership Board" />
     <meta property="og:image" content="https://fidv.org/youngleaders/img/fidv-share-image.jpg" />
 
@@ -61,6 +61,12 @@
                         <a class="page-scroll" href="/youngleaders#past-event-2">Past Events</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="/youngleaders#leadership">Leadership</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="https://fidv.org/youngleaders/become-a-sponsor">Become a Sponsor</a>
+                    </li>
+                    <li>
                         <a class="btn btn-fidv" href="https://fidv.org/youngleaders/donate" style="border:none;">Donate</a>
                     </li>
                 </ul>
@@ -83,9 +89,10 @@
             <div class="row">
                 <div class="col-md-8">
                     <div id="bbox-root"></div>
+
                     <script type="text/javascript">
                            window.bboxInit = function () {
-                               bbox.showForm('791bf9b7-54ff-4a50-96e3-41a2c4a96f9c');
+                               bbox.showForm('4d2f8bf1-64bc-4c37-93d8-3b25172ba43a');
                            };
                            (function () {
                                var e = document.createElement('script'); e.async = true;
@@ -109,8 +116,8 @@
                 <div class="col-md-4">
                     <div class="row board">
                         <div class="col-xs-12">
-                            <a class="fancybox" href="https://fidv.org/youngleaders/img/save-the-date-2018.jpg">
-                                <img src="https://fidv.org/youngleaders/img/save-the-date-2018.jpg" alt="" class="img-responsive center-block"/>
+                            <a class="fancybox" href="https://fidv.org/youngleaders/img/winter-gala-2018-invite-large.jpg">
+                                <img src="https://fidv.org/youngleaders/img/winter-gala-2018-invite-small.jpg" alt="" class="img-responsive center-block"/>
                             </a>
                         </div>
                     </div>
