--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+
     <title>FIDV Young Leaders</title>
     <meta name="description" content="Annual Winter Gala presented by the FIDV Young Leadership Board" />
 
@@ -59,6 +60,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#past-event-2">Past Events</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#leadership">Leadership</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="https://fidv.org/youngleaders/become-a-sponsor">Become a Sponsor</a>
@@ -134,7 +138,7 @@
                             <strong>Date:</strong> Saturday, March 10, 2018<br>
                             <strong>Time:</strong> 9:30pm - 2:30am<br>
                             <strong>Location:</strong> The Lighthouse @ Chelsea Piers<br>
-                            <strong>Attire:</strong> Cocktial Chic<br>
+                            <strong>Attire:</strong> Cocktail Attire<br>
                         </p>
 
                         <br>
@@ -149,21 +153,33 @@
                                 <h4 class="section-heading">Thank you to our sponsors!</h2>
                                 <div class="sponsor-logos">
                                     <div class="sponsor-logos__logo">
-                                        <img class="img-responsive" src="https://placehold.it/300x100?text=Your+Logo+Here">
+                                        <a href="https://www.berkadia.com/" target="_blank">
+                                            <img class="img-responsive" src="img/sponsors/berkadia.jpg">
+                                        </a>
                                     </div>
                                     <div class="sponsor-logos__logo">
-                                        <img class="img-responsive" src="https://placehold.it/300x100?text=Your+Logo+Here">
+                                        <a href="https://label.co/" target="_blank">
+                                            <img class="img-responsive" src="img/sponsors/label.jpg">
+                                        </a>
                                     </div>
                                     <div class="sponsor-logos__logo">
-                                        <img class="img-responsive" src="https://placehold.it/300x100?text=Your+Logo+Here">
+                                        <a href="http://www.outerstuff.com/" target="_blank">
+                                            <img class="img-responsive" src="img/sponsors/outer.jpg">
+                                        </a>
+                                    </div>
+                                    <div class="sponsor-logos__logo">
+                                        <a href="https://www.schwartz-cpas.com/" target="_blank">
+                                            <img class="img-responsive" src="img/sponsors/schwartz.jpg">
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="sponsor-names">
                                     <ul>
-                                        <li><a href="#">Sponsor Name 1</a></li>
-                                        <li><a href="#">Sponsor Name 2</a></li>
-                                        <li><a href="#">Sponsor Name 3</a></li>
-                                        <li><a href="#">Sponsor Name 4</a></li>
+                                        <li><p>The Markowitz and Shmuely Families</p></li>
+                                        <li><p>The Leichtling Family</p></li>
+                                        <li><p>The Dezer Family</p></li>
+                                        <li><p>The Fogel Family</p></li>
+                                        <li><p>Dr. Meir Greenberg and Family</p></li>
                                     </ul>
                                 </div>
                             </div>
@@ -195,7 +211,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="section-heading text-center" style="padding-top: 25px;">About Your Donation</h2>
-                    <p>100% of all ticket sales and sponsorships go to benefit the Young Disabled Veterans Program. The main objective is to help disabled veterans resume normal life. This is done by providing a framework that offers not only medical treatment but also social support and integration.</p>
+                    <p>100% of the proceeds from the Winter Gala benefit the Young Disabled Veterans Program. The main objective is to help disabled veterans resume normal life. This is done by providing a framework that offers not only medical treatment but also social support and integration.</p>
                     <p>The ZDVO Young Members Club offers support and encouragement to its members aged 18-35 by offering them a variety of programs suitable to their particular needs and interests. Regular events such as stand-up comedians, live music performances, jeep rides, paintball outings and extreme sports including rappelling and rock climbing are examples of these programs tailored especially for the benefit of the young veterans. Bringing together the young veterans from all parts of the country creates a bond and camaraderie so vital to their rehabilitation.</p>
                 </div>
             </div>
@@ -338,6 +354,66 @@
                             </a>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="leadership">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="section-heading text-center">Leadership</h2>
+                    <br>
+                    <h4 class="text-center">Board Chairs</h4>
+                    <div class="text-center">
+                        <p>Michael Shmuely &amp; Jacob Kent</p>
+                        <br>
+                    </div>
+                    <h4 class="text-center">Board Members</h4>
+                    <ul class="list-inline text-center">
+                        <li>Abigail Major</li>
+                        <li>Andrew Farage</li>
+                        <li>Ari Papir</li>
+                        <li>Ariel Zuckerman</li>
+                        <li>Ben Davis</li>
+                        <li>Dana Himoff</li>
+                        <li>Dana Eisenberg</li>
+                        <li>Daniella Pomeranc</li>
+                        <li>Danielle Markowitz</li>
+                        <li>David Weiss</li>
+                        <li>Deanna Meyer</li>
+                        <li>Eitan Reshef</li>
+                        <li>Eliesse Lissner</li>
+                        <li>Gabriella Zahn-Bielski</li>
+                        <li>Gideon Drucker</li>
+                        <li>Hallie Geller</li>
+                        <li>Howard Mizel</li>
+                        <li>Jake Pereg</li>
+                        <li>Jessica Brezel</li>
+                        <li>Jillian Rothman</li>
+                        <li>Jonathan Fine</li>
+                        <li>Jordan Schwitzer</li>
+                        <li>Justin Bell</li>
+                        <li>Lana Meyer</li>
+                        <li>Leat Ruben</li>
+                        <li>Matthew Coleman</li>
+                        <li>Max Gladstone</li>
+                        <li>Madelaine Ellberger</li>
+                        <li>Molly Lukash</li>
+                        <li>Michael Sheffy</li>
+                        <li>Marc Squire</li>
+                        <li>Racine Levy</li>
+                        <li>Raquel Moffson</li>
+                        <li>Rebecca Basloe</li>
+                        <li>Romy Golan</li>
+                    </ul>
+                    <br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 join-fidv text-center">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdrpyMKJCX3hJy_ZnA7EK6qM2whEEEdzM2O2EBKSsx959lfDQ/viewform?usp=sf_link" target="_blank" class="btn btn-primary btn-xl">Join the Board</a>
                 </div>
             </div>
         </div>
